<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.twe.samples.eventnote.EventFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_label"
        android:id="@+id/title_label"
        style="?android:listSeparatorTextViewStyle"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_id"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/title_hint"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details_label"
        android:id="@+id/details_label"
        style="?android:listSeparatorTextViewStyle"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/details_id"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/details_hint"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/button_id"
        android:layout_gravity="center_horizontal"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/solved_label"
        android:id="@+id/solved_id"/>

</LinearLayout>
